cleanning the code ladies and index

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link href="assets/css/carous.css" rel="stylesheet" />
     <!--    try number 1-->
     <link href="assets/css/hot.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/PDS/assets/css/carandladies.css">
 
     <link href="vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
 
@@ -275,6 +276,7 @@
 
                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                        <div class="verified-avatar-icon-green">✓</div>
                     </div>
                   </div>
 
@@ -282,37 +284,6 @@
 
                 </div>
               </div>
-<!-- 
-              <div class="tab-pane fade" id="nav-phone" role="tabpanel" aria-labelledby="nav-phone-tab">
-                <div class="row gx-3">
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/phone-2.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/phone-3.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/phone-4.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/phone-6.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
-                </div>
-              </div>
-              <div class="tab-pane fade" id="nav-camera" role="tabpanel" aria-labelledby="nav-camera-tab">
-                <div class="row gx-3">
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/gopro7silver1.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
-
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/camera-4.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/camera-5.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
-                </div>
-              </div> -->
 
                 <!-- ============================================-->
                 <script>
@@ -349,10 +320,10 @@
               <div class="tab-pane fade" id="nav-massage" role="tabpanel" aria-labelledby="nav-massage-tab">
                 <div class="row gx-3">
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                      <div class="mybox">
+                      <div class="myboxx">
                         <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-1.jpeg" /></div>
                         <div class="verified-avatar-icon">✓</div>
-                        <div class="mytext">
+                        <div class="mytextt">
                           <h3>Vendor3</h3>
                           <h3>*****</h3>
                       </div>
@@ -360,10 +331,10 @@
                   </div>
 
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                      <div class="mybox">
+                      <div class="myboxx">
                         <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-2.jpeg" /></div>
                         <div class="verified-avatar-icon">✓</div>
-                        <div class="mytext">
+                        <div class="mytextt">
                           <h3>Vendor1</h3>
                           <h3>*****</h3>
                       </div>
@@ -371,10 +342,10 @@
                   </div>
 
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="mybox">
+                    <div class="myboxx">
                       <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-3.jpeg" /></div>
                       <div class="verified-avatar-icon-green">✓</div>
-                      <div class="mytext">
+                      <div class="mytextt">
                         <h3>Vendor2</h3>
                         <h3>***</h3>
                     </div>
@@ -388,63 +359,6 @@
           </div>
         </div>
 
-        <style>
-          .mybox{/* image */
-              position: relative;
-              display: block; /* Make the width of box same as image */
-          }
-
-          .verified-avatar-icon {
-              position: absolute;
-              right: 0;
-              top: 0;
-              border-radius: 50%;
-              background: rgb(255, 8, 0);
-              width: 30px;
-              height: 30px;
-              display: grid;
-              text-align: center;
-              line-height: 25px;
-              color: white;
-              font-size: 30px;
-              font-weight: bolder;
-            }
-
-            .verified-avatar-icon-green {
-              position: absolute;
-              right: 0;
-              top: 0;
-              border-radius: 50%;
-              background: rgb(0, 255, 55);
-              width: 30px;
-              height: 30px;
-              display: grid;
-              text-align: center;
-              line-height: 25px;
-              color: white;
-              font-size: 30px;
-              font-weight: bolder;
-            }
-
-          .mytext{
-            position: absolute; 
-            bottom: 0; 
-            background: rgb(223, 121, 5);
-            background: rgba(89, 150, 65, 0.5); /* Black see-through */
-            color: #f1f1f1; 
-            width: 100%;
-            transition: .5s ease;
-            opacity:0;
-            color: white;
-            font-size: 10px;
-            padding: 10px;
-            text-align: center;
-          }
-          .mybox:hover .mytext{
-            opacity: 1;
-          }
-
-      </style>
 
       </section>
 
