--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
     <!-- ===============================================-->
     <!--    Stylesheets-->
     <!-- ===============================================-->
-    
+    <link href="/PDS/assets/css/carandladies.css" rel="stylesheet" >
     <link href="assets/css/theme.css" rel="stylesheet" />
     <link href="assets/css/carous.css" rel="stylesheet" />
     <!--    try number 1-->
     <link href="assets/css/hot.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/PDS/assets/css/carandladies.css">
 
     <link href="vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
 
