cleanning the code ladies and index

--- a/index.html
+++ b/index.html
@@ -319,10 +319,10 @@
               <div class="tab-pane fade" id="nav-massage" role="tabpanel" aria-labelledby="nav-massage-tab">
                 <div class="row gx-3">
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                      <div class="myboxx">
+                      <div class="mybox">
                         <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-1.jpeg" /></div>
                         <div class="verified-avatar-icon">✓</div>
-                        <div class="mytextt">
+                        <div class="mytext">
                           <h3>Vendor3</h3>
                           <h3>*****</h3>
                       </div>
@@ -330,10 +330,10 @@
                   </div>
 
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                      <div class="myboxx">
+                      <div class="mybox">
                         <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-2.jpeg" /></div>
                         <div class="verified-avatar-icon">✓</div>
-                        <div class="mytextt">
+                        <div class="mytext">
                           <h3>Vendor1</h3>
                           <h3>*****</h3>
                       </div>
@@ -341,10 +341,10 @@
                   </div>
 
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="myboxx">
+                    <div class="mybox">
                       <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-3.jpeg" /></div>
                       <div class="verified-avatar-icon-green">✓</div>
-                      <div class="mytextt">
+                      <div class="mytext">
                         <h3>Vendor2</h3>
                         <h3>***</h3>
                     </div>
