--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- ===============================================-->
     <!--    Stylesheets-->
     <!-- ===============================================-->
-    <link href="/PDS/assets/css/carandladies.css" rel="stylesheet" >
+    <link href="/PDS/assets/css/car_and_ladies.css" rel="stylesheet" >
     <link href="assets/css/theme.css" rel="stylesheet" />
     <link href="assets/css/carous.css" rel="stylesheet" />
     <!--    try number 1-->
@@ -293,10 +293,10 @@
               <div class="tab-pane fade" id="nav-massage" role="tabpanel" aria-labelledby="nav-massage-tab">
                 <div class="row gx-3">
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                      <div class="mybox">
+                      <div class="myboxx">
                         <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-1.jpeg" /></div>
                         <div class="verified-avatar-icon">✓</div>
-                        <div class="mytext">
+                        <div class="mytextt">
                           <h3>Vendor3</h3>
                           <h3>*****</h3>
                       </div>
@@ -304,10 +304,10 @@
                   </div>
 
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                      <div class="mybox">
+                      <div class="myboxx">
                         <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-2.jpeg" /></div>
                         <div class="verified-avatar-icon">✓</div>
-                        <div class="mytext">
+                        <div class="mytextt">
                           <h3>Vendor1</h3>
                           <h3>*****</h3>
                       </div>
@@ -315,10 +315,10 @@
                   </div>
 
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="mybox">
+                    <div class="myboxx">
                       <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-3.jpeg" /></div>
                       <div class="verified-avatar-icon-green">✓</div>
-                      <div class="mytext">
+                      <div class="mytextt">
                         <h3>Vendor2</h3>
                         <h3>***</h3>
                     </div>
