--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                        
+                        <div class="verified-avatar-icon-green">✓</div>
                         
                     </div>
                   </div>
