adding first local

--- a/index.html
+++ b/index.html
@@ -383,12 +383,14 @@
 
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                       <div class="myboxx">
-                        <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-4.jpg"/></div>
+                        <a href="Pages/user.html">
+                        <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-4.jpg" /></div>
                         <div class="verified-avatar-icon-green">✓</div>
                         <div class="mytextt">
                           <h3>Gaia</h3>
                           <h3>3939319999</h3>
                       </div>
+                    </a>
                     </div>
                   </div>
 
