--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="myboxx">
                       <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/electronics/jbl_charge_5.jpg" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                      <div class="verified-avatar-icon-green">✓</div> 
                       <div class="mytextt">
                         <h3>Jbl charge 5</h3>
                         <h3>150€</h3>
@@ -285,6 +286,7 @@
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="myboxx">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/electronics/jbl_reflect.jpg" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="verified-avatar-icon-green">✓</div> 
                     <div class="mytextt">
                       <h3>Jbl reflect</h3>
                       <h3>120€</h3>
