fixing issues related to map

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta name="theme-color" content="#ffffff">
 
 
+    
     <!-- ===============================================-->
     <!--    Stylesheets-->
     <!-- ===============================================-->
@@ -405,10 +406,10 @@
 
                       <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
                       <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-                      <div class="verified-avatar-icon">✓</div> 
+                      <div class="verified-avatar-icon-green">✓</div> 
                       <div class="mytextt">
-                        <h3>Anita</h3>
-                        <h3>*****</h3>
+                        <h3>Cindy</h3>
+                        <h3>3511015238</h3>
                     </div>
                     </div>
 
@@ -558,28 +559,13 @@ opacity: 1;
 
         <div class="container">
           <div class="row justify-content-xl-between gx-3">
-            <div class="col-6 col-md-4 col-lg-3 col-xl-2 mb-3">
-              <h5 class="lh-lg fw-bold text-1000">Company</h5>
-              <ul class="list-unstyled mb-md-4 mb-lg-0">
-                <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">About Us</a></li>
-                <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">News</a></li>
-              </ul>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 col-xl-2 mb-3">
-              <h5 class="lh-lg fw-bold text-1000">Pricing</h5>
-              <ul class="list-unstyled mb-md-4 mb-lg-0">
-                <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">Plans</a></li>
-                <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">Paid vs. Free</a></li>
-              </ul>
-            </div>
+
             <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2">
               <h5 class="lh-lg fw-bold text-1000">Contact</h5>
               <p class="text-800"><i class="fas fa-envelope text-warning me-2"></i><span class="text-800">milano.pds@gmail.com</span></p>
               <p class="text-800"><i class="fas fa-map-marker-alt text-success me-2"></i><span class="text-800">Viale Argone,Milano</span></p>
             </div>
-            <div class="col-12">
-              <div class="text-center my-4"><a href="#!"><i class="me-4 fab fa-facebook fs-3 text-facebook"></i></a><a href="#!"> <i class="me-4 fab fa-twitter fs-3 text-twitter"></i></a><a href="#!"> <i class="me-4 fab fa-instagram fs-3 text-instagram"></i></a></div>
-            </div>
+
           </div>
           <div class="border-bottom border-3"></div>
 
