--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>PDS | Ecommerce</title>
+    <title>PDS Milan</title>
 
 
     <!-- ===============================================-->
@@ -418,7 +418,7 @@
 
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                       <div class="myboxx">
-                        <a href="Pages/user.html">
+                        <a href="Pages/Shanghai.html">
                         <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-4.jpg" /></div>
                         <div class="verified-avatar-icon-green">✓</div>
                         <div class="mytextt">
