remove how it works

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item px-2"><a class="nav-link fw-bold" aria-current="page" href="index.html">Home</a></li>
-              <li class="nav-item px-2"><a class="nav-link fw-bold" href="#howitworks">How it works</a></li>
+              <!-- <li class="nav-item px-2"><a class="nav-link fw-bold" href="#howitworks">How it works</a></li> -->
               <li class="nav-item px-2"><a class="nav-link fw-bold" href="#products">Offers </a></li>
               <li class="nav-item px-2"><a class="nav-link fw-bold" href="#maparea">Map </a></li>
             </ul>
@@ -131,7 +131,7 @@
 
       <!-- ============================================-->
       <!-- <section> begin explaination of the service ============================-->
-      <section class="py-0" id="howitworks">
+<!--       <section class="py-0" id="howitworks">
 
         <div class="container">
           <div class="row">
@@ -164,9 +164,10 @@
             </div>
           </div>
           <hr class="mt-6" />
-        </div><!-- end of .container-->
+        </div>
+       
 
-      </section>
+      </section> -->
       <!-- <section> close ============================-->
 
       <!-- ============================================-->
