upload pictures and modify css

--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
             <div class="col-12">
               <div class="swiper-container pb-4 overflow-hidden" data-pagination-target="pagination1">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/raspberries1.jpeg" alt="products" />
+                  <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/Slideshow/Electronics.jpg" alt="products" />
                   </div>
-                  <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/food1.jpeg" alt="products" />
+                  <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/Slideshow/Fashion.jpg" alt="products" />
                   </div>
                   <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/cosmetic1.jpeg" alt="products" />
                   </div>
-                  <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/bio1.jpeg" alt="products" />
+                  <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/Slideshow/Shoes.jpg" alt="products" />
                   </div>
                   <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/driver1.jpeg" alt="products" />
                   </div>
-                  <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/grocery1.jpeg" alt="products" />
+                  <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/Slideshow/Spa.jpg" alt="products" />
                   </div>
                   <div class="swiper-slide h-auto"><img class="w-100" src="assets/img/gallery/skin1.jpeg" alt="products" />
                   </div>
@@ -363,6 +363,7 @@
                       <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 
                       <div class="verified-avatar-icon-green">✓</div> 
+                      
                     </div>
                 </div>
 
@@ -517,7 +518,7 @@ opacity: 1;
           </div>
           <!--/.bg-holder-->
 
-          <div class="row flex-center py-5">
+          <div class="row flex-center">
 
             <div id="map">
             </div>
