add info for cars and fix titles of the elements

--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                       <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/shoes_zoom_pegasus_34.jpg" /></div>
                       <div class="verified-avatar-icon-green">✓</div>
                       <div class="mytextt">
-                        <h3>Nike Zoom Pegasus 34,Size:43</h3>
-                        <h3>75€</h3>
+                        <h4>Nike Zoom Pegasus 34,Size:43</h4>
+                        <h4>75€</h4>
                     </div>
                   </div>
                   </div>
@@ -229,8 +229,8 @@
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/shoes_nike_renew.jpg" ></div>
                     <div class="verified-avatar-icon-green">✓</div>
                       <div class="mytextt">
-                        <h3>Nike Renew,Size:45</h3>
-                        <h3>65€</h3>
+                        <h4>Nike Renew,Size:45</h4>
+                        <h4>65€</h4>
                       </div>
                     </div>
                   </div>
@@ -240,8 +240,8 @@
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/nike_air_max.jpg" ></div>
                     <div class="verified-avatar-icon-green">✓</div>
                     <div class="mytextt">
-                      <h3>Nike Air Max Command, Size:44</h3>
-                      <h3>130€</h3>
+                      <h4>Nike Air Max Command, Size:44</h4>
+                      <h4>130€</h4>
                     </div>
                   </div>
                   </div>
@@ -251,8 +251,8 @@
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/puma.jpg" ></div>
                     <div class="verified-avatar-icon-green">✓</div>
                     <div class="mytextt">
-                      <h3>Puma Uproar Hybrid, Size:44.5</h3>
-                      <h3>50€</h3>
+                      <h4>Puma Uproar Hybrid, Size:44.5</h4>
+                      <h4>50€</h4>
                     </div>
                   </div>
                   </div>
@@ -279,8 +279,8 @@
                       <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/electronics/jbl_charge_5.jpg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                       <div class="verified-avatar-icon-green">✓</div> 
                       <div class="mytextt">
-                        <h3>Jbl charge 5</h3>
-                        <h3>150€</h3>
+                        <h4>Jbl charge 5</h4>
+                        <h4>150€</h4>
                       </div>
                     </div>
                   </div>
@@ -290,8 +290,8 @@
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/electronics/jbl_reflect.jpg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                     <div class="verified-avatar-icon-green">✓</div> 
                     <div class="mytextt">
-                      <h3>Jbl reflect</h3>
-                      <h3>120€</h3>
+                      <h4>Jbl reflect</h4>
+                      <h4>120€</h4>
                     </div>
                   </div>
                   </div>
@@ -332,7 +332,11 @@
                           <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
                           <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 
-                        <div class="verified-avatar-icon">✓</div> 
+                        <div class="verified-avatar-icon-green">✓</div> 
+                        <div class="mytextt">
+                          <h4>VW Golf 6,110CV,88000Km</h4>
+                          <h4>9000€</h4>
+                      </div>
                     </div>
                   </div>
 
@@ -363,6 +367,10 @@
                       <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 
                       <div class="verified-avatar-icon-green">✓</div> 
+                      <div class="mytextt">
+                        <h4>Mini Country-man cooper S,190CV,53000Km</h4>
+                        <h4>23000€</h4>
+                    </div>
                       
                     </div>
                 </div>
@@ -410,8 +418,8 @@
                       <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
                       <div class="verified-avatar-icon-green">✓</div> 
                       <div class="mytextt">
-                        <h3>Cindy</h3>
-                        <h3>3511015238</h3>
+                        <h4>Cindy</h4>
+                        <h4>3511015238</h4>
                     </div>
                     </div>
 
@@ -424,8 +432,8 @@
                         <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-4.jpg" /></div>
                         <div class="verified-avatar-icon-green">✓</div>
                         <div class="mytextt">
-                          <h3>Gaia</h3>
-                          <h3>3939319999</h3>
+                          <h4>Gaia</h4>
+                          <h4>3939319999</h4>
                       </div>
                     </a>
                     </div>
@@ -497,6 +505,12 @@ text-align: center;
 }
 .myboxx:hover .mytextt{
 opacity: 1;
+}
+
+
+
+.slideshow-container:hover .mytextt{
+  opacity: 1;
 }
 </style>
 
